2007-12-20  Richard Jones  <rjones@redhat.com>

	* libvirt/libvirt_c.c: Use enter/leave_blocking_section around
	  synchronous libvirt API calls, so that multithreaded OCaml
	  programs can be used.
	* configure.ac: Version 0.4.0.0 for release.
	* libvirt/libvirt.ml, libvirt/libvirt.mli, libvirt/libvirt_c.c:
	  Change the ad-hoc "foo not supported" exception into a
	  specific Libvirt.Not_supported "foo" exception.
	* virt-top/virt_top.ml: Change virt-top to understand new
	  exception type.

2007-11-20  Richard Jones  <rjones@redhat.com>

	* libvirt/libvirt.mli, libvirt/libvirt.ml: New error numbers
	  in base libvirt.
	* libvirt/libvirt_c.c: Gracefully handle the case where libvirt
	  throws an error number we have not heard of before (eg. when
	  dynamic linking with newer libvirt).
	* configure.ac: Check <libvirt/virterror.h> exists.
	* configure.ac: Version 0.3.3.4.
	* virt-top/virt-top.pod: Fixed ocaml libvirt website URI in manpage.

2007-11-19  Richard Jones  <rjones@redhat.com>

	* virt-top/virt-top.pod: Example connection URIs in virt-top manpage
	  (bug 390691).

2007-11-14  Richard Jones  <rjones@redhat.com>

	* libvirt/libvirt.mli: Added filename = string type to clarify
	  some function signatures which take a filename.  Added lots
	  of function documentation.
	* libvirt/libvirt.ml: Added VIR_FROM_OPENVZ.
	* configure.ac: Version 0.3.3.3 for release.

2007-11-14  Richard Jones  <rjones@redhat.com>

	* Makefile.in: New rules for releasing and uploading.

2007-11-14  Richard Jones  <rjones@redhat.com>

	* libvirt/libvirt.mli, libvirt/libvirt.ml, libvirt/libvirt_c.c:
	  Added support for virNodeGetFreeMemory and virNodeGetCellsFreeMemory
	* mlvirsh/mlvirsh.ml: Added 'freecell' command.

2007-10-19  Richard Jones  <rjones@redhat.com>

	* virt-top/virt_top_calendar.ml: Added --end-time option.
	  Extra optional dep on ocaml-calendar.
	* virt-top/virt-top.pod: Document how to compress and split
	  CSV files.  Document --end-time option and time formats.